--- a/frontend-js/src/css/themes.css
+++ b/frontend-js/src/css/themes.css
@@ -2,18 +2,19 @@
     --body-background-color: #ededed;
     --body-text-color: #121212;
     --body-shadow-color: #010101;
-    --table-border-color: #121212;
-    --table-even-background-color: #e6d8b3;
-    --table-odd-background-color: #e6cc7d;
+    --table-border-color: #888888;
+    --table-even-background-color: #dac483;
+    --table-odd-background-color: #e6d8b3;
     --division-background-color: #d3b76e;
     --delete-button-background-color: #aa0000;
-    --delete-button-border-color: #bb0000;
+    --delete-button-border-color: #888888;
     --delete-button-text-color: #121212;
     --addplr-button-background-color: #b68a1b;
-    --addplr-button-border-color: #c79b1b;
+    --addplr-button-border-color: #888888;
     --addplr-button-text-color: #121212;
+    --addplr-button-text-color-disabled: #5c5c5c;
     --theme-button-background-color: #121212;
-    --theme-button-border-color: #232323;
+    --theme-button-border-color: #888888;
     --theme-button-text-color: #ededed;
     --addplr-input-background-color: #dcdcdc;
     --addplr-input-border-color: #ededed;
@@ -21,25 +22,26 @@
     --addptn-input-background-color: #dcdcdc;
     --addplr-input-border-color: #ededed;
     --addptn-input-text-color: #121212;
-    --error-span-text-color: #AA0000;
+    --error-span-text-color: #aa0000;
 }
 
 .dark {
-    --body-background-color: #121212;
+    --body-background-color: #010101;
     --body-text-color: #c6c6c6;
     --body-shadow-color: #b5b5b5;
     --table-even-background-color: #2e2e2e;
     --table-odd-background-color: #121212;
-    --table-border-color: #9c9c9c;
+    --table-border-color: #888888;
     --division-background-color: #1e1e1e;
     --delete-button-background-color: #AA0000;
-    --delete-button-border-color: #990000;
+    --delete-button-border-color: #888888;
     --delete-button-text-color: #121212;
     --addplr-button-background-color: #9c9c9c;
-    --addplr-button-border-color: #8c8c8c;
-    --addplr-button-text-color: #343434;
+    --addplr-button-border-color: #888888;
+    --addplr-button-text-color: #121212;
+    --addplr-button-text-color-disabled: #5c5c5c;
     --theme-button-background-color: #ededed;
-    --theme-button-border-color: #dddddd;
+    --theme-button-border-color: #888888;
     --theme-button-text-color: #121212;
     --addplr-input-background-color: #dcdcdc;
     --addplr-input-border-color: #cbcbcb;
