bueda changes, can include multiple players

--- a/frontend-js/src/css/style.css
+++ b/frontend-js/src/css/style.css
@@ -3,6 +3,7 @@
 body {
     background-color: var(--body-background-color);
     color: var(--body-text-color);
+    font-family: 'Lucida Sans';
     margin: 10px;
 }
 
@@ -12,122 +13,22 @@ h1 {
     text-align: center;
 }
 
+h2,
 h3 {
-    margin: 0 0 10px;
-}
-
-h3,
-.divRules {
     text-align: left;
-}
-
-.divRules {
-    margin: 0;
-    border: 0;
-    padding: 0;
-}
-
-.pRules {
-    font-family: 'Courier New';
-    font-size: 12px;
-    font-weight: 550;
-    margin: 0 0 5px;
-    border: 0;
-    padding: 0;
-}
-
-body,
-.division,
-.roundTable,
-.rules {
-    display: grid;
-    grid-template-columns: 100%;
-    justify-content: center;
-}
-
-body,
-#errorPointsCheckboxes,
-#themeChanged {
-    font-family: 'Lucida Sans';
-}
-
-h1,
-th,
-#errorPointsCheckboxes,
-#themeChanged {
-    font-weight: bold;
-}
-
-table {
-    border-collapse: collapse;
-}
-
-tr:nth-child(even) {
-    background-color: var(--table-even-background-color);
-}
-
-tr:nth-child(odd) {
-    background-color: var(--table-odd-background-color);
-}
-
-td,
-th {
-    border: 1px solid;
-    border-color: var(--table-border-color);
-    text-align: center;
-}
-
-th {
-    padding: 3px;
-}
-
-td {
-    padding: 8px;
+    margin: 0 0 10px;
 }
 
 .division {
     background-color: var(--division-background-color);
+    border-radius: 25px;
     margin: 20px 100px;
     padding: 30px;
-    border-radius: 25px;
 }
 
-.form-control {
-    padding: 5px 15px;
-    border-radius: 3px;
-}
-
-.form-points {
-    margin: 0;
-    background-color: var(--addptn-input-background-color);
-    border-color: var(--addptn-input-border-color);
-    color: var(--addptn-input-text-color);
-    width: 50px;
-    text-align: center;
-}
-
-.form-player {
-    background-color: var(--addplr-input-background-color);
-    border-color: var(--addplr-input-border-color);
-    color: var(--addplr-input-text-color);
-    margin: 0 0 10px;
-}
-
-#errorPointsCheckboxes,
-#themeChanged {
-    justify-self: right;
-}
-
-#errorPointsCheckboxes,
-#themeChanged {
-    margin: 2px 0 2px;
-}
-
-#errorPointsCheckboxes {
-    color: var(--error-span-text-color);
-}
-
-#sp {
+body,
+.division {
     display: grid;
-    grid-template-columns: 85% 15%;
+    grid-template-columns: 100%;
+    justify-content: center;
 }
