big changes: info double view with app info and game info; more validation control in add points; can insert more than one player, separated by commas

--- a/frontend-js/src/css/input.css
+++ b/frontend-js/src/css/input.css
@@ -18,5 +18,6 @@
     background-color: var(--addplr-input-background-color);
     border-color: var(--addplr-input-border-color);
     color: var(--addplr-input-text-color);
+    font-size: 12px;
     margin: 0 0 10px;
 }
