--- a/frontend-js/src/css/info.css
+++ b/frontend-js/src/css/info.css
@@ -1,14 +1,20 @@
 @import 'themes.css';
 
+.infoButtons {
+    grid-template-columns: 50% 50%;
+    justify-content: center;
+}
+
 .divRules {
     text-align: left;
     margin: 0;
 }
 
 .pRules {
-    font-family: 'Courier New';
+    font-family: 'Lucida Console';
     font-size: 12px;
     font-weight: 550;
+    line-height: 150%;
     margin: 0 0 5px;
 }
 
@@ -27,6 +33,7 @@
     padding: 0;
 }
 
+.infoButtons,
 .rules,
 #sp {
     display: grid;
